--- a/LibraryProcessing/appsettings.json
+++ b/LibraryProcessing/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "Default": "Data Source=OLEKSII_HP\\SQLEXPRESS;Initial Catalog=EF_part2;Integrated Security=True;TrustServerCertificate=True"
+    "Default": "Data Source=LENOVOHOME\\SQLEXPRESS;Initial Catalog=EF_part2;Integrated Security=True;TrustServerCertificate=True"
   }
 }
