--- a/Services/Library.Services.csproj
+++ b/Services/Library.Services.csproj
@@ -1,19 +1,13 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="appsettings.json" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\Library_DAL_2\Library_DAL_2.csproj" />
-    <ProjectReference Include="..\Services\Library.Services.csproj" />
   </ItemGroup>
 
 </Project>
