--- a/Library.API/appsettings.json
+++ b/Library.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Data Source=LENOVOHOME\\SQLEXPRESS;Initial Catalog=EF_part2;Integrated Security=True;TrustServerCertificate=True"
+    "Default": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=EF_part2;Integrated Security=True;TrustServerCertificate=True"
   },
   "JwtInfo": {
     "TokenKey": "some_strong_security_super_key123!"
