--- a/Library_DAL_2/Library_DAL_2.csproj
+++ b/Library_DAL_2/Library_DAL_2.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Common\Library.Common.csproj" />
+    <ProjectReference Include="..\Library.Common\Library.Common.csproj" />
   </ItemGroup>
 
 </Project>
