--- a/Library.API/Library.API.csproj
+++ b/Library.API/Library.API.csproj
@@ -14,8 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Common\Library.Common.csproj" />
-    <ProjectReference Include="..\Services\Library.Services.csproj" />
+    <ProjectReference Include="..\Library.Common\Library.Common.csproj" />
+    <ProjectReference Include="..\Library.Services\Library.Services.csproj" />
   </ItemGroup>
 
 </Project>
