--- a/Library.Repository/Library.Repository.csproj
+++ b/Library.Repository/Library.Repository.csproj
@@ -12,7 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Library.Common\Library.Common.csproj" />
-    <ProjectReference Include="..\Library_DAL_2\Library_DAL_2.csproj" />
+    <ProjectReference Include="..\Library.DAL_2\Library.DAL.csproj" />
   </ItemGroup>
 
 </Project>
